examples/test/testpolicy565.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy565
  namespace: namespace301
spec:
  podSelector:
    matchLabels:
      key25: value27
      key12: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value1
          key14: value25
      podSelector:
        matchLabels:
          key34: value41
          key13: value4
          key2: value33
